Auth JWT completa con roles y panel admin